--- a/home.html
+++ b/home.html
@@ -43,8 +43,6 @@
 		</nav>
 			<div class="container fluid float-left">
 				<div class="parallax"></div>
-
-
 			</div>
 			<div class="midsection">
 				<div >
@@ -65,6 +63,15 @@
 				<h5>
 					(415)6**-***8
 				</h5>
+			 </div>
+			 <div class="undermidsection">
+
+			 </div>
+			 <div class="undermidsection2">
+
+			 </div>
+			 <div class="undermidsection3">
+
 			 </div>
 			<!--
 
