added bottom section

--- a/home.html
+++ b/home.html
@@ -73,6 +73,9 @@
 			 <div class="undermidsection3">
 
 			 </div>
+			 <div class="bottomsection">
+
+			 </div>
 			<!--
 
 			<div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
