--- a/home.html
+++ b/home.html
@@ -42,66 +42,34 @@
 			<!-- Nav Bar End -->
 		</nav>
 			<div class="container fluid float-left">
-				<div class="parallax"></div>
+				<div class="parallax img-responsive test"></div>
 			</div>
-			<div class="midsection">
-				<div >
-					<img style="margin-top:100px" src="https://i.imgur.com/unXrwuh.png" class="img-thumbnail" />
-				</div>
-				 <h1 style="margin-top:50px">
-					Ricky Chen
-				</h1>
-				<h5 style="margin-top:50px">
-					BS in Computer Science
-				</h5>
-				<h5>
-					San Francisco, California
-				</h5>
-				<h5 style="margin-top:100px">
-					******10@gmail.com
-				</h5>
-				<h5>
-					(415)6**-***8
-				</h5>
-			 </div>
-			 <div class="undermidsection">
-
-			 </div>
-			 <div class="undermidsection2">
-
-			 </div>
-			 <div class="undermidsection3">
-
-			 </div>
-			 <div class="bottomsection">
-
-			 </div>
-			<!--
-
-			<div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
-				<div class="carousel-inner">
-					<div class="carousel-item active">
-						<img class="d-block w-100" src="https://i.imgur.com/gbWow6p.jpg" alt="First slide">
+			 <div class="container">
+				<div class="midsection">
+					<div>
+						<img style="margin-top:100px" src="https://i.imgur.com/unXrwuh.png" class="img-thumbnail" />
 					</div>
-					<div class="carousel-item">
-						<img class="d-block w-100" src="https://i.imgur.com/6Tl2Pfz.jpg" alt="Second slide">
-					</div>
-					<div class="carousel-item">
-						<img class="d-block w-100" src="https://i.imgur.com/4bFvZJf.jpg" alt="Third slide">
-					</div>
-				</div>
-				<a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
-					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-					<span class="sr-only">Previous</span>
-				</a>
-				<a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
-					<span class="carousel-control-next-icon" aria-hidden="true"></span>
-					<span class="sr-only">Next</span>
-				</a>
-			</div>
-			-->
-
-
+					<h1 style="margin-top:50px">
+						Ricky Chen
+					</h1>
+					<h5 style="margin-top:50px">
+						BS in Computer Science
+					</h5>
+					<h5>
+						San Francisco, California
+					</h5>
+					<h5 style="margin-top:100px">
+						******10@gmail.com
+					</h5>
+					<h5>
+						(415)6**-***8
+					</h5>
+				 </div>
+				<div class="undermidsection"></div>
+				<div class="undermidsection2"></div>
+				<div class="undermidsection3"></div>
+				<div class="bottomsection"></div>
+			 </div>
 		<!-- Bootstrap -->
 		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
