--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 		<link rel="stylesheet" href="home.css" />
 		<link href="https://fonts.googleapis.com/css?family=Rokkitt" rel="stylesheet">
-		<title>Hello, world!</title>
+		<title>Ricky Chen</title>
 	</head>
 	<body>
 		<div id="page" class="container">
@@ -49,7 +49,7 @@
 				<div class="parallax img-responsive col col-lg-9"></div>
 				<div class="col col-lg-3 float-right center">
 					<div class="float-right">
-						<img src="https://i.imgur.com/unXrwuh.png" class="img-thumbnail" />
+						<a href="www.linkedin.com/in/ricky-chen-2b24b562"> <img src="https://i.imgur.com/unXrwuh.png" class="img-thumbnail" /> </a>
 					</div>
 					<h1 class="float-right descriptionFont1" style="margin-top:50px">
 						Ricky Chen
@@ -63,40 +63,51 @@
 				</div>
 			</div>
 			<div id="aboutmesection" class="aboutmeblock aboutmeblockleft col col-lg-12 descriptionFont1">
-				<p class="aboutmeblockinfo">
-					About Me: Bacon ipsum dolor amet pork <br />
-					jowl bacon chicken strip steak. Pork belly jerky pork landjaeger<br />
-					venison shankle andouille spare ribs turducken swine drumstick. <br />
-					kevin venison ham tenderloin jerky frankfurter meatloaf. Meatball<br />
-					turducken filet mignon short loin sirloin kevin. Boudin turkey<br />
-				</p>
+				<br />
+				<h1>About Me:</h1><br />
+				<hr />
+				<span class="descTextSize">My name is Ricky. </span><br />
+				<span class="descTextSize">When I am not working, I enjoy watching sports and fitness. </span><br />
+				<span class="descTextSize">I am currently working in the Digital Adveristing World.</span>
 			</div>
 			<div id="edusection" class="edublock descriptionFont1">
-				<p>
-					Education: Bacon ipsum dolor amet pork <br />
-					jowl bacon chicken strip steak. Pork belly jerky pork landjaeger<br />
-					venison shankle andouille spare ribs turducken swine drumstick. <br />
-					kevin venison ham tenderloin jerky frankfurter meatloaf. Meatball<br />
-					turducken filet mignon short loin sirloin kevin. Boudin turkey<br />
+				Education: <br />
+				<hr />
+					UC Riverside 2015<br />
+					Bachelor of Science in Computer Science <br />
+					Coursework: <br />
+				<p class="educationFont">
+					Machine Organisation & Assembly Programming (CS 61) <br />
+					Software Construction (CS 100) <br />
+					Discrete Structures (CS 111) <br />
+					Logic Design (CS 120A) <br />
+					Introduction to Embedded Systems (CS 120B) <br />
+					Computer Graphics (CS 130) <br />
+					Intermediate Data Structures and Algorithms (CS 141) <br />
+					Automata and Formal Languages (CS 150) <br />
+					Design and Architecture of Computer Systems (CS 161) <br />
+					Computer Security (CS 165) <br />
+					Mobile Wireless (CS 169) <br />
+					Modeling and Simulation (CS 177) <br />
+					Intro to Software Engineering (CS 180) <br />
 				</p>
 			</div>
 			<div id="awardclubsection" class="awardclubblock descriptionFont1">
-				<p>
-					Award/Club: Bacon ipsum dolor amet pork <br />
-					jowl bacon chicken strip steak. Pork belly jerky pork landjaeger<br />
-					venison shankle andouille spare ribs turducken swine drumstick. <br />
-					kevin venison ham tenderloin jerky frankfurter meatloaf. Meatball<br />
-					turducken filet mignon short loin sirloin kevin. Boudin turkey<br />
-				</p>
+				<h1> Awards: </h1>
+				<hr />
+				<span class="descTextSize">Hearst Autos 2018 First Mover Award - Stellar Performance </span> <br /><br />
+				<h1>Clubs:</h1>
+				<hr />
+				<span class="descTextSize">Association for Computing Machinery (ACM) 2010-2014 </span>  <br />
+				<span class="descTextSize">Pi Kappa Alpha Fraternity </span>  <br />
 			</div>
 			<div id="miscsection" class="miscblock descriptionFont1">
-				<p>
-					Misc: Bacon ipsum dolor amet pork <br />
-					jowl bacon chicken strip steak. Pork belly jerky pork landjaeger<br />
-					venison shankle andouille spare ribs turducken swine drumstick. <br />
-					kevin venison ham tenderloin jerky frankfurter meatloaf. Meatball<br />
-					turducken filet mignon short loin sirloin kevin. Boudin turkey<br />
-				</p>
+				<br />
+				Misc: <br />
+				<hr />
+				<span class="descTextSize"> Bacon ipsum dolor amet frankfurter cow salami pork loin <br />
+				t-bone chuck pastrami leberkas sausage doner bresaola turkey beef <br />
+				short loin. Andouille pork chop short ribs sirloin, </span>
 			</div>
 			<div class="bottomsection"></div>
 		</div>
