optimized for iPX

--- a/home.html
+++ b/home.html
@@ -45,69 +45,103 @@
 				</nav>
 				<!-- Nav Bar End -->
 			</div>
-			<div class="row topsection">
+			<div class="row">
 				<div class="parallax img-responsive col col-lg-9"></div>
 				<div class="col col-lg-3 float-right center">
 					<div class="float-right">
 						<a href="www.linkedin.com/in/ricky-chen-2b24b562"> <img src="https://i.imgur.com/unXrwuh.png" class="img-thumbnail" /> </a>
 					</div>
-					<h1 class="float-right descriptionFont1" style="margin-top:50px">
+					<div class="headerNameSize RokkittFont">
 						Ricky Chen
-					</h1>
-					<h5 class="float-right descriptionFont1" style="text-align:center">
+					</div>
+					<div  class="headerDescSize RokkittFont">
 						BS in Computer Science<br/>
 						San Francisco, California<br/><br/>
 						******10@gmail.com<br/><br/>
-						(415)6**-***8<br/><br/>
-					</h5>
+						(415) 6**-***8<br/><br/>
+					</div>
 				</div>
 			</div>
-			<div id="aboutmesection" class="aboutmeblock aboutmeblockleft col col-lg-12 descriptionFont1">
-				<br />
-				<h1>About Me:</h1><br />
-				<hr />
-				<span class="descTextSize">My name is Ricky. </span><br />
-				<span class="descTextSize">When I am not working, I enjoy watching sports and fitness. </span><br />
-				<span class="descTextSize">I am currently working in the Digital Adveristing World.</span>
+			<div class="row">
+				<div class="aboutmeblock col col-lg-12 RokkittFont">
+					<div class="infoHeaderSize">
+						About Me:
+					</div>
+					<hr />
+					<div class="infoDescSize">
+						My name is Ricky. When I am not working, I enjoy watching sports and fitness. I am currently working in the Digital Adveristing World.
+					</div>
+				</div>
 			</div>
-			<div id="edusection" class="edublock descriptionFont1">
-				Education: <br />
-				<hr />
-					UC Riverside 2015<br />
-					Bachelor of Science in Computer Science <br />
-					Coursework: <br />
-				<p class="educationFont">
-					Machine Organisation & Assembly Programming (CS 61) <br />
-					Software Construction (CS 100) <br />
-					Discrete Structures (CS 111) <br />
-					Logic Design (CS 120A) <br />
-					Introduction to Embedded Systems (CS 120B) <br />
-					Computer Graphics (CS 130) <br />
-					Intermediate Data Structures and Algorithms (CS 141) <br />
-					Automata and Formal Languages (CS 150) <br />
-					Design and Architecture of Computer Systems (CS 161) <br />
-					Computer Security (CS 165) <br />
-					Mobile Wireless (CS 169) <br />
-					Modeling and Simulation (CS 177) <br />
-					Intro to Software Engineering (CS 180) <br />
-				</p>
+			<div class="row">
+				<div class="edublock RokkittFont col col-lg-12">
+					<div class="infoHeaderSize">
+						Education:
+					</div>
+					<hr />
+					<div class="educationHeaders">
+						UC Riverside 2015<br />
+						Bachelor of Science in Computer Science <br />
+						Coursework: <br />
+					</div>
+					<div class="educationClasses">
+						Machine Organisation & Assembly Programming (CS 61) <br />
+						Software Construction (CS 100) <br />
+						Discrete Structures (CS 111) <br />
+						Logic Design (CS 120A) <br />
+						Introduction to Embedded Systems (CS 120B) <br />
+						Computer Graphics (CS 130) <br />
+						Intermediate Data Structures and Algorithms (CS 141) <br />
+						Automata and Formal Languages (CS 150) <br />
+						Design and Architecture of Computer Systems (CS 161) <br />
+						Computer Security (CS 165) <br />
+						Mobile Wireless (CS 169) <br />
+						Modeling and Simulation (CS 177) <br />
+						Intro to Software Engineering (CS 180) <br />
+					</div>
+				</div>
 			</div>
-			<div id="awardclubsection" class="awardclubblock descriptionFont1">
-				<h1> Awards: </h1>
-				<hr />
-				<span class="descTextSize">Hearst Autos 2018 First Mover Award - Stellar Performance </span> <br /><br />
-				<h1>Clubs:</h1>
-				<hr />
-				<span class="descTextSize">Association for Computing Machinery (ACM) 2010-2014 </span>  <br />
-				<span class="descTextSize">Pi Kappa Alpha Fraternity </span>  <br />
+			<div class="row">
+				<div class="skillblock RokkittFont col col-lg-12">
+					<div class="infoHeaderSize">
+						Skill:
+					</div>
+					<hr />
+					<div class="progress skillmargin">
+						<div class="progress-bar bg-success" role="progressbar" style="width: 65%;" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"><b>C++</b></div>
+					</div>
+					<div class="progress skillmargin">
+						<div class="progress-bar" role="progressbar bg-warning" style="width: 55%;" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"><b>Python</b></div>
+					</div>
+					<div class="progress skillmargin">
+						<div class="progress-bar bg-success" role="progressbar" style="width: 80%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"><b>HTML/CSS/JS</b></div>
+					</div>
+					<div class="progress skillmargin">
+						<div class="progress-bar bg-info" role="progressbar" style="width: 70%;" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"><b>Excel VBA</b></div>
+					</div>
+					<div class="progress skillmargin">
+						<div class="progress-bar bg-success" role="progressbar" style="width: 80%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"><b>Excel</b></div>
+					</div>
+				</div>
 			</div>
-			<div id="miscsection" class="miscblock descriptionFont1">
-				<br />
-				Misc: <br />
-				<hr />
-				<span class="descTextSize"> Bacon ipsum dolor amet frankfurter cow salami pork loin <br />
-				t-bone chuck pastrami leberkas sausage doner bresaola turkey beef <br />
-				short loin. Andouille pork chop short ribs sirloin, </span>
+			<div class="row">
+				<div class="awardclubblock RokkittFont col col-lg-12">
+					<div class="infoHeaderSize">
+						Awards:
+					</div>
+					<hr />
+					<div class="infoDescSize">
+						Hearst Autos 2018 First Mover Award - Stellar Performance
+					</div>
+					<div class="infoHeaderSize">
+						Clubs:
+					</div>
+					<hr />
+					<div class="infoDescSize">
+						Association for Computing Machinery (ACM) 2010-2014  <br />
+						Pi Kappa Alpha Fraternity <br />
+					</div>
+				</div>
 			</div>
 			<div class="bottomsection"></div>
 		</div>
