--- a/home.html
+++ b/home.html
@@ -49,7 +49,7 @@
 				<div class="parallax img-responsive col col-lg-9"></div>
 				<div class="col col-lg-3 float-right center">
 					<div class="float-right">
-						<a href="www.linkedin.com/in/ricky-chen-2b24b562"> <img src="https://i.imgur.com/unXrwuh.png" class="img-thumbnail" /> </a>
+						<a href="https://www.linkedin.com/in/ricky-chen-2b24b562"> <img src="https://i.imgur.com/unXrwuh.png" class="img-thumbnail" /> </a>
 					</div>
 					<div class="headerNameSize RokkittFont">
 						Ricky Chen
