weird ipx issue

--- a/home.html
+++ b/home.html
@@ -45,9 +45,11 @@
 				</nav>
 				<!-- Nav Bar End -->
 			</div>
+			<div class="row paraRow">
+				<div class="parallax img-responsive col col-lg-9 col-sm-12"></div>
+			</div>
 			<div class="row">
-				<div class="parallax img-responsive col col-lg-9"></div>
-				<div class="col col-lg-3 float-right center">
+				<div class="col col-lg-3 col-sm-12 float-right center">
 					<div class="float-right">
 						<a href="https://www.linkedin.com/in/ricky-chen-2b24b562"> <img src="https://i.imgur.com/unXrwuh.png" class="img-thumbnail" /> </a>
 					</div>
