--- a/home.html
+++ b/home.html
@@ -6,6 +6,7 @@
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 		<link rel="stylesheet" href="home.css" />
 		<link href="https://fonts.googleapis.com/css?family=Rokkitt" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<title>Ricky Chen</title>
 	</head>
@@ -48,43 +49,60 @@
 			</div>
 			<div class="row">
 				<div class="paraRow test2 parallax col col-lg-9 col-sm-12"></div>
-			</div>
-			<div class="row">
-				<div>
-						<img class="mobileNoParallax" style="display:none" src="https://images.unsplash.com/photo-1457030642598-b037296c9296?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=b0cee8af04565ee4de4477cb5dcbabf8&auto=format&fit=crop&w=750&q=80" height="42" width="42">
-				</div>
-			</div>
-			</row>
-			<div class="row">
-				<div id="mesection" class="meblock col col-lg-3 col-sm-12 float-right center">
-					<div class="float-right">
-						<a href="https://www.linkedin.com/in/ricky-chen-2b24b562"> <img src="https://i.imgur.com/unXrwuh.png" class="img-thumbnail" /> </a>
+				<div id="mesection" class="meblock col col-lg-3 col-sm-12 float-right">
+					<div class="img-thumbnail">
+						<a href="https://www.linkedin.com/in/ricky-chen-2b24b562"> <img src="https://i.imgur.com/unXrwuh.png" /> </a>
 					</div>
-					<div class="headerNameSize RokkittFont">
+					<div class="mesectionname headerNameSize headerFont">
 						Ricky Chen
 					</div>
-					<div  class="headerDescSize RokkittFont">
+					<div  class="mesectioninfo headerDescSize RokkittFont">
 						BS in Computer Science<br/>
 						San Francisco, California<br/><br/>
 						rickychen10@gmail.com<br/><br/>
 						(415) 608-4948<br/><br/>
 					</div>
 				</div>
-			</div>
-			<div class="row">
-				<div id="aboutmesection" class="aboutmeblock col col-lg-12 RokkittFont">
-					<div class="infoHeaderSize">
-						About Me:
-					</div>
-					<hr />
-					<div class="infoDescSize">
-						My name is Ricky. When I am not working, I enjoy watching sports and fitness. I am currently working in the Digital Adveristing World.
+				<div class="row">
+					<div class="col-sm-24">
+						<img class="mobileNoParallax" style="display:none" src="https://images.unsplash.com/photo-1457030642598-b037296c9296?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=b0cee8af04565ee4de4477cb5dcbabf8&auto=format&fit=crop&w=750&q=80" height="42" width="42">
 					</div>
 				</div>
 			</div>
 			<div class="row">
-				<div id="edusection" class="edublock RokkittFont col col-lg-12">
-					<div class="infoHeaderSize">
+				<div id="aboutmesection" class="aboutmeblock col col-lg-12">
+					<div class="infoHeaderSize headerFont">
+						About Me:
+					</div>
+					<hr />
+					<div class="infoDescSize RokkittFont">
+						My name is Ricky. <br />
+						When I am not working, I enjoy watching sports and fitness. <br />
+						I am currently working in the Digital Adveristing World.
+					</div>
+				</div>
+			</div>
+			<div class="mobileMeSection row">
+				<div class="col-sm-12" style="width:100%">
+					<div class="mobilepfinfo">
+						<div class="img-thumbnail center">
+							<a href="https://www.linkedin.com/in/ricky-chen-2b24b562"> <img src="https://i.imgur.com/unXrwuh.png" /> </a>
+						</div>
+						<div class="headerNameSize headerFont">
+							Ricky Chen
+						</div>
+						<div  class="headerDescSize RokkittFont">
+							BS in Computer Science<br/>
+							San Francisco, California<br/><br/>
+							rickychen10@gmail.com<br/><br/>
+							(415) 608-4948<br/><br/>
+						</div>
+					</div>
+				</div>
+			</div><!-- kdjfljsf-->
+			<div class="row">
+				<div id="edusection" class="edublock col col-lg-12">
+					<div class="infoHeaderSize headerFont">
 						Education:
 					</div>
 					<hr />
@@ -93,7 +111,7 @@
 						Bachelor of Science in Computer Science <br />
 						Coursework: <br />
 					</div>
-					<div class="educationClasses">
+					<div class="educationClasses educationFont">
 						Machine Organisation & Assembly Programming (CS 61) <br />
 						Software Construction (CS 100) <br />
 						Discrete Structures (CS 111) <br />
@@ -112,7 +130,7 @@
 			</div>
 			<div class="row">
 				<div id="skillsection" class="skillblock RokkittFont col col-lg-12">
-					<div class="infoHeaderSize">
+					<div class="infoHeaderSize headerFont">
 						Skill:
 					</div>
 					<hr />
@@ -134,19 +152,19 @@
 				</div>
 			</div>
 			<div class="row">
-				<div id="awardclubsection" class="awardclubblock RokkittFont col col-lg-12">
-					<div class="infoHeaderSize">
+				<div id="awardclubsection" class="awardclubblock col col-lg-12">
+					<div class="infoHeaderSize headerFont">
 						Awards:
 					</div>
 					<hr />
-					<div class="infoDescSize">
+					<div class="infoDescSize RokkittFont">
 						Hearst Autos 2018 First Mover Award - Stellar Performance
 					</div>
-					<div class="infoHeaderSize">
+					<div class="infoHeaderSize headerFont">
 						Clubs:
 					</div>
 					<hr />
-					<div class="infoDescSize">
+					<div class="infoDescSize RokkittFont">
 						Association for Computing Machinery (ACM) 2010-2014  <br />
 						Pi Kappa Alpha Fraternity <br />
 					</div>
