--- a/home.html
+++ b/home.html
@@ -64,7 +64,7 @@
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-sm-24">
+					<div class="col-sm-12">
 						<img class="mobileNoParallax" style="display:none" src="https://images.unsplash.com/photo-1457030642598-b037296c9296?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=b0cee8af04565ee4de4477cb5dcbabf8&auto=format&fit=crop&w=750&q=80" height="42" width="42">
 					</div>
 				</div>
@@ -82,16 +82,16 @@
 					</div>
 				</div>
 			</div>
-			<div class="mobileMeSection row">
+			<div class="mobileMeSection row" style="display:none">
 				<div class="col-sm-12" style="width:100%">
 					<div class="mobilepfinfo">
 						<div class="img-thumbnail center">
 							<a href="https://www.linkedin.com/in/ricky-chen-2b24b562"> <img src="https://i.imgur.com/unXrwuh.png" /> </a>
 						</div>
-						<div class="headerNameSize headerFont">
+						<div class="mobileheaderNameSize headerFont">
 							Ricky Chen
 						</div>
-						<div  class="headerDescSize RokkittFont">
+						<div  class="mobileheaderDescSize RokkittFont">
 							BS in Computer Science<br/>
 							San Francisco, California<br/><br/>
 							rickychen10@gmail.com<br/><br/>
