--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="home.css" />
 		<link href="https://fonts.googleapis.com/css?family=Rokkitt" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 		<title>Ricky Chen</title>
 	</head>
 	<body>
@@ -86,7 +86,7 @@
 				<div class="col-sm-12" style="width:100%">
 					<div class="mobilepfinfo">
 						<div class="img-thumbnail center">
-							<a href="https://www.linkedin.com/in/ricky-chen-2b24b562"> <img src="https://i.imgur.com/unXrwuh.png" /> </a>
+							<a href="https://www.linkedin.com/in/ricky-chen-2b24b562"> <img style="margin-top:20px" src="https://i.imgur.com/unXrwuh.png" /> </a>
 						</div>
 						<div class="mobileheaderNameSize headerFont">
 							Ricky Chen
@@ -165,15 +165,18 @@
 					</div>
 					<hr />
 					<div class="infoDescSize RokkittFont">
-						Association for Computing Machinery (ACM) 2010-2014  <br />
+						Association for Computing Machinery (ACM)<br />
 						Pi Kappa Alpha Fraternity <br />
 					</div>
 				</div>
 			</div>
 			<div id="contactsection" class="contactblock">
 				<i class="fa fa-copyright"> Ricky Chen</i>
+				<a href="https://www.linkedin.com/in/ricky-chen-2b24b562"><i class="fab fa-linkedin-in float-right contactIcon"></i></a>
+				<a href="mailto:rickychen10@gmail.com?Subject=Interview" target="_top"><i class="fa fa-envelope float-right contactIcon"></i></a>
+				<a href="https://www.facebook.com/ricky.chen.52090"><i class="fab fa-facebook-f float-right contactIcon"></i></a>
+
 			</div>
-		</div>
 		<!-- Bootstrap -->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" crossorigin="anonymous"></script>
 		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
