fixed all the width of mbp 13in

--- a/home.html
+++ b/home.html
@@ -171,7 +171,7 @@
 				</div>
 			</div>
 			<div id="contactsection" class="contactblock">
-				<i class="fa fa-copyright"> Ricky Chen</i>
+				<i class="fa fa-copyright contactIconCC"> Ricky Chen</i>
 				<a href="https://www.linkedin.com/in/ricky-chen-2b24b562"><i class="fab fa-linkedin-in float-right contactIcon"></i></a>
 				<a href="mailto:rickychen10@gmail.com?Subject=Interview" target="_top"><i class="fa fa-envelope float-right contactIcon"></i></a>
 				<a href="https://www.facebook.com/ricky.chen.52090"><i class="fab fa-facebook-f float-right contactIcon"></i></a>
