--- a/home.html
+++ b/home.html
@@ -49,7 +49,7 @@
 			</div>
 			<div class="row">
 				<div class="paraRow test2 parallax col col-lg-9 col-sm-12"></div>
-				<div id="mesection" class="meblock col col-lg-3 col-sm-12 float-right">
+				<div id="mesection" class="meinfoblock col col-lg-3 col-sm-12 float-right">
 					<div class="img-thumbnail">
 						<a href="https://www.linkedin.com/in/ricky-chen-2b24b562"> <img src="https://i.imgur.com/unXrwuh.png" /> </a>
 					</div>
@@ -66,19 +66,6 @@
 				<div class="row">
 					<div class="col-sm-12">
 						<img class="mobileNoParallax" style="display:none" src="https://images.unsplash.com/photo-1457030642598-b037296c9296?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=b0cee8af04565ee4de4477cb5dcbabf8&auto=format&fit=crop&w=750&q=80" height="42" width="42">
-					</div>
-				</div>
-			</div>
-			<div class="row">
-				<div id="aboutmesection" class="aboutmeblock col col-lg-12">
-					<div class="infoHeaderSize headerFont">
-						About Me:
-					</div>
-					<hr />
-					<div class="infoDescSize RokkittFont">
-						My name is Ricky. <br />
-						When I am not working, I enjoy watching sports and fitness. <br />
-						I am currently working in the Digital Adveristing World.
 					</div>
 				</div>
 			</div>
@@ -100,6 +87,19 @@
 					</div>
 				</div>
 			</div><!-- kdjfljsf-->
+			<div class="row">
+				<div id="aboutmesection" class="aboutmeblock col col-lg-12">
+					<div class="infoHeaderSize headerFont">
+						About Me:
+					</div>
+					<hr />
+					<div class="infoDescSize RokkittFont">
+						My name is Ricky. <br />
+						When I am not working, I enjoy watching sports and fitness. <br />
+						I am currently working in the Digital Adveristing World.
+					</div>
+				</div>
+			</div>
 			<div class="row">
 				<div id="edusection" class="edublock col col-lg-12">
 					<div class="infoHeaderSize headerFont">
