added resume download

--- a/home.html
+++ b/home.html
@@ -27,6 +27,9 @@
 							<li class="nav-item">
 								<a class="nav-link" href="#edusection">Education</a>
 							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="https://drive.google.com/file/d/0B5wQb3d_8alUR3hDalF0dmhyY1k/view?usp=sharing">Resume</a>
+							</li>
 							<li class="nav-item dropdown">
 								<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 									Misc
