fixed bottom background color

--- a/home.html
+++ b/home.html
@@ -21,31 +21,28 @@
 					</button>
 					<div class="collapse navbar-collapse" id="navbarSupportedContent">
 						<ul class="navbar-nav mr-auto">
-							<li class="nav-item active">
-								<a class="nav-link" href="#aboutmesection">About Me<span class="sr-only">(current)</span></a>
+							<li class="nav-item">
+								<a class="nav-link" href="#aboutmesection">About Me</a>
 							</li>
 							<li class="nav-item">
 								<a class="nav-link" href="#edusection">Education</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="https://drive.google.com/file/d/0B5wQb3d_8alUR3hDalF0dmhyY1k/view?usp=sharing">Resume</a>
+								<a class="nav-link" href="#skillsection">Skills</a>
 							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="#awardclubsection">Award/Clubs</a>
+							</li>
+							<div class="dropdown-divider"></div>
 							<li class="nav-item dropdown">
 								<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 									Misc
 								</a>
 								<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-									<a class="dropdown-item" href="#awardclubsection">Awards</a>
-									<a class="dropdown-item" href="#awardclubsection">Clubs</a>
-									<div class="dropdown-divider"></div>
-									<a class="dropdown-item" href="#contactsection">Contacts</a>
+									<a class="dropdown-item" href="https://drive.google.com/file/d/0B5wQb3d_8alUR3hDalF0dmhyY1k/view?usp=sharing">Download Resume</a>
 								</div>
 							</li>
 						</ul>
-						<form class="form-inline my-2 my-lg-0">
-							<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-							<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-						</form>
 					</div>
 				</nav>
 				<!-- Nav Bar End -->
@@ -134,11 +131,11 @@
 			<div class="row">
 				<div id="skillsection" class="skillblock RokkittFont col col-lg-12">
 					<div class="infoHeaderSize headerFont">
-						Skill:
+						Skills:
 					</div>
 					<hr />
 					<div class="progress skillmargin">
-						<div class="progress-bar bg-success" role="progressbar" style="width: 65%;" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"><b>C++</b></div>
+						<div class="progress-bar bg-success" role="progressbar" style="width: 60%;" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"><b>C++</b></div>
 					</div>
 					<div class="progress skillmargin">
 						<div class="progress-bar" role="progressbar bg-warning" style="width: 55%;" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"><b>Python</b></div>
@@ -150,7 +147,7 @@
 						<div class="progress-bar bg-info" role="progressbar" style="width: 70%;" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"><b>Excel VBA</b></div>
 					</div>
 					<div class="progress skillmargin">
-						<div class="progress-bar bg-success" role="progressbar" style="width: 80%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"><b>Excel</b></div>
+						<div class="progress-bar bg-success" role="progressbar" style="width: 55%;" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"><b>Excel</b></div>
 					</div>
 				</div>
 			</div>
@@ -173,12 +170,11 @@
 					</div>
 				</div>
 			</div>
-			<div id="contactsection" class="contactblock">
+			<div id="contactsection" class="contactblock full-width-div">
 				<i class="fa fa-copyright contactIconCC"> Ricky Chen</i>
 				<a href="https://www.linkedin.com/in/ricky-chen-2b24b562"><i class="fab fa-linkedin-in float-right contactIcon"></i></a>
 				<a href="mailto:rickychen10@gmail.com?Subject=Interview" target="_top"><i class="fa fa-envelope float-right contactIcon"></i></a>
 				<a href="https://www.facebook.com/ricky.chen.52090"><i class="fab fa-facebook-f float-right contactIcon"></i></a>
-
 			</div>
 		<!-- Bootstrap -->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" crossorigin="anonymous"></script>
