--- a/home.html
+++ b/home.html
@@ -170,6 +170,72 @@
 					</div>
 				</div>
 			</div>
+			<!--Project 1 start -->
+			<div class="row">
+				<button id="project1ModalBtn">Project 1</button>
+				<!-- Carosel -->
+				<div id="project1Modal" class="modal">
+					<div class="modal-content">
+						<span class="close">&times;</span>
+						<div class="row">
+							<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+								<ol class="carousel-indicators">
+									<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+									<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+									<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+								</ol>
+								<div class="carousel-inner">
+									<div class="carousel-item active">
+										<img class="d-block w-100" src="https://images.unsplash.com/photo-1500916276122-00b7d12c2aa2?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=25fe43988a3592e779440a1da38f29f4&auto=format&fit=crop&w=1352&q=80" alt="First slide">
+										<div>
+											<span class="projectDescFont">Bacon ipsum dolor amet shank tenderloin pork chop ham hock leberkas beef. </span>
+										</div>
+									</div>
+									<div class="carousel-item">
+										<img class="d-block w-100" src="https://images.unsplash.com/photo-1431794062232-2a99a5431c6c?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=13b58b0343d8efc06a88c55e843f624f&auto=format&fit=crop&w=1350&q=80" alt="Second slide">
+										<div>
+											<span class="projectDescFont">Bresaola burgdoggen boudin ham porchetta chicken pancetta jerky kevin hamburger.  </span>
+										</div>
+									</div>
+									<div class="carousel-item">
+										<img class="d-block w-100" src="https://images.unsplash.com/photo-1465189684280-6a8fa9b19a7a?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=29640b60327a3b66e91817e39adc433a&auto=format&fit=crop&w=1350&q=80" alt="Third slide">
+										<div>
+											<span class="projectDescFont">Picanha brisket drumstick porchetta chuck tri-tip. Fatback drumstick cow shankle landjaeger pastram </span>
+										</div>
+									</div>
+								</div>
+								<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+									<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+									<span class="sr-only">Previous</span>
+								</a>
+								<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+									<span class="carousel-control-next-icon" aria-hidden="true"></span>
+									<span class="sr-only">Next</span>
+								</a>
+
+							</div>
+						</div>
+					</div>
+				</div>
+				<script>
+					var modalBtn = document.getElementById('project1ModalBtn');
+					var modal = document.getElementById('project1Modal');
+					var modalSpan = document.getElementsByClassName("close")[0];
+					modalBtn.onclick = function() {
+						modal.style.display = "block";
+					}
+					modalSpan.onclick = function() {
+						modal.style.display = "none";
+					}
+					window.onclick = function(event) {
+						if (event.target == modal) {
+							modal.style.display = "none";
+						}
+					}
+				</script>
+				<!-- Carosel end-->
+			</div>
+			<!--Project 1 end -->
 			<div id="contactsection" class="contactblock full-width-div">
 				<i class="fa fa-copyright contactIconCC"> Ricky Chen</i>
 				<a href="https://www.linkedin.com/in/ricky-chen-2b24b562"><i class="fab fa-linkedin-in float-right contactIcon"></i></a>
