--- a/home.html
+++ b/home.html
@@ -178,37 +178,53 @@
 					<div class="modal-content">
 						<span class="close">&times;</span>
 						<div class="row">
-							<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+							<div id="project1CarouselIndicators" class="carousel slide" data-ride="carousel">
 								<ol class="carousel-indicators">
-									<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-									<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-									<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+									<li data-target="#project1CarouselIndicators" data-slide-to="0" class="active"></li>
+									<li data-target="#project1CarouselIndicators" data-slide-to="1"></li>
+									<li data-target="#project1CarouselIndicators" data-slide-to="2"></li>
 								</ol>
 								<div class="carousel-inner">
 									<div class="carousel-item active">
-										<img class="d-block w-100" src="https://images.unsplash.com/photo-1500916276122-00b7d12c2aa2?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=25fe43988a3592e779440a1da38f29f4&auto=format&fit=crop&w=1352&q=80" alt="First slide">
+										<img class="d-block w-100" src="https://i.imgur.com/uYMKQ5g.png" alt="First slide">
 										<div>
-											<span class="projectDescFont">Bacon ipsum dolor amet shank tenderloin pork chop ham hock leberkas beef. </span>
+											<span class="projectDescFont">
+												This is an automation script written with CasperJS library. Everything is ran through CMD/Terminal.
+												A brief description of what it does is, it scraps a list of URLs for all GPT implementations and returns desired custom criteria.
+												Features it includes: entering credentials for staging websites, infinite scrolling scraping, GPT spec mapping comparisons.
+											</span>
 										</div>
 									</div>
 									<div class="carousel-item">
-										<img class="d-block w-100" src="https://images.unsplash.com/photo-1431794062232-2a99a5431c6c?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=13b58b0343d8efc06a88c55e843f624f&auto=format&fit=crop&w=1350&q=80" alt="Second slide">
+										<img class="d-block w-100" src="https://i.imgur.com/cxlvoD6.png" alt="Second slide">
 										<div>
-											<span class="projectDescFont">Bresaola burgdoggen boudin ham porchetta chicken pancetta jerky kevin hamburger.  </span>
+											<span class="projectDescFont">
+												This first script does all the scraping of the list of URLs. This includes entering zipcodes, bypassing popups and inifinite scrolling for lazy loaded ads.
+											</span>
 										</div>
 									</div>
 									<div class="carousel-item">
-										<img class="d-block w-100" src="https://images.unsplash.com/photo-1465189684280-6a8fa9b19a7a?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=29640b60327a3b66e91817e39adc433a&auto=format&fit=crop&w=1350&q=80" alt="Third slide">
+										<img class="d-block w-100" src="https://i.imgur.com/8R55YsY.png" alt="Second slide">
 										<div>
-											<span class="projectDescFont">Picanha brisket drumstick porchetta chuck tri-tip. Fatback drumstick cow shankle landjaeger pastram </span>
+											<span class="projectDescFont">
+												This second script takes all the requested Urls retrieved from the first script and decodes it
+											</span>
+										</div>
+									</div>
+									<div class="carousel-item">
+										<img class="d-block w-100" src="https://i.imgur.com/rism3fs.png" alt="Third slide">
+										<div>
+											<span class="projectDescFont">
+												This is the CSV file with all the custom criteria and various checks I implemented.
+											</span>
 										</div>
 									</div>
 								</div>
-								<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+								<a class="carousel-control-prev" href="#project1CarouselIndicators" role="button" data-slide="prev">
 									<span class="carousel-control-prev-icon" aria-hidden="true"></span>
 									<span class="sr-only">Previous</span>
 								</a>
-								<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+								<a class="carousel-control-next" href="#project1CarouselIndicators" role="button" data-slide="next">
 									<span class="carousel-control-next-icon" aria-hidden="true"></span>
 									<span class="sr-only">Next</span>
 								</a>
