--- a/home.html
+++ b/home.html
@@ -39,7 +39,7 @@
 									Misc
 								</a>
 								<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-									<a class="dropdown-item" href="https://drive.google.com/file/d/0B5wQb3d_8alUR3hDalF0dmhyY1k/view?usp=sharing">Download Resume</a>
+									<a class="dropdown-item" target="_blank" href="https://drive.google.com/file/d/0B5wQb3d_8alUR3hDalF0dmhyY1k/view?usp=sharing">Download Resume</a>
 								</div>
 							</li>
 						</ul>
@@ -48,27 +48,65 @@
 				<!-- Nav Bar End -->
 			</div>
 			<div class="row">
-				<div class="paraRow test2 parallax col col-lg-9 col-sm-12"></div>
-				<div id="mesection" class="meinfoblock col col-lg-3 col-sm-12 float-right">
-					<div class="img-thumbnail">
-						<a href="https://www.linkedin.com/in/ricky-chen-2b24b562"> <img src="https://i.imgur.com/unXrwuh.png" /> </a>
+				<div style="position:relative;" class="paraRow test2 parallax col col-lg-12 col-sm-12">
+					<div class="row">
+						<div class="col">
+1
+						</div>
+						<div class="col headShotMainDiv">
+							<a href="https://www.linkedin.com/in/ricky-chen-2b24b562">
+								<img class="sendToBottom" style="width:85%" src="https://i.imgur.com/dFtxIHG.jpg" />
+							</a>
+						</div>
+						<div class="col">
+							<div class="sendToBottom">
+								<div class="piiSizingName headerFont">
+									Ricky Chen
+								</div>
+								<div  class="piiSizingInfo RokkittFont">
+									BS in Computer Science<br/>
+									San Francisco, California<br/>
+									rickychen10@gmail.com<br/>
+									(415) 608-4948<br/><br/>
+								</div>
+							</div>
+						</div>
 					</div>
-					<div class="mesectionname headerNameSize headerFont">
-						Ricky Chen
-					</div>
-					<div  class="mesectioninfo headerDescSize RokkittFont">
-						BS in Computer Science<br/>
-						San Francisco, California<br/><br/>
-						rickychen10@gmail.com<br/><br/>
-						(415) 608-4948<br/><br/>
-					</div>
+				<!--	<div style="position:absolute;"  class="col col-lg-3 col-sm-12 float-right">
+
+						<div class="row">
+							<div class="col">
+
+							</div>
+							<div class="col">
+								<a class="thumbnail" href="https://www.linkedin.com/in/ricky-chen-2b24b562">
+									<img src="https://i.imgur.com/dFtxIHG.jpg" />
+								</a>
+							</div>
+							<div class="topInfoText float-right col">
+								<div class="mesectionname headerNameSize headerFont">
+									Ricky Chen
+								</div>
+								<div  class="headerDescSize RokkittFont">
+									BS in Computer Science<br/>
+									San Francisco, California<br/><br/>
+									rickychen10@gmail.com<br/><br/>
+									(415) 608-4948<br/><br/>
+								</div>
+							</div>
+						</div>
+
+
+				</div> -->
 				</div>
+
 				<div class="row">
 					<div class="col-sm-12">
 						<img class="mobileNoParallax" style="display:none" src="https://images.unsplash.com/photo-1457030642598-b037296c9296?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=b0cee8af04565ee4de4477cb5dcbabf8&auto=format&fit=crop&w=750&q=80" height="42" width="42">
 					</div>
 				</div>
 			</div>
+
 			<div class="mobileMeSection row" style="display:none">
 				<div class="col-sm-12" style="width:100%">
 					<div class="mobilepfinfo">
