stuck on making the pii align

--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
 		<title>Ricky Chen</title>
 	</head>
 	<body>
-		<div id="page" class="container">
+		<div id="page" class="container containerOveride">
 			<div class="row">
 				<!-- Nav Bar Start -->
 				<nav class="navbar navbar-expand-lg navbar-light bg-light col col-lg-12">
@@ -50,26 +50,39 @@
 			<div class="row">
 				<div style="position:relative;" class="paraRow test2 parallax col col-lg-12 col-sm-12">
 					<div class="row">
-						<div class="col">
+						<div class="col-3">
 1
 						</div>
-						<div class="col headShotMainDiv">
-							<a href="https://www.linkedin.com/in/ricky-chen-2b24b562">
-								<img class="sendToBottom" style="width:85%" src="https://i.imgur.com/dFtxIHG.jpg" />
-							</a>
-						</div>
-						<div class="col">
-							<div class="sendToBottom">
-								<div class="piiSizingName headerFont">
-									Ricky Chen
+						<div class="col-6 headShotMainDiv fadeInEffect" style="float:right;">
+							<div class="row">
+								<div class="leftPii">
+									<a href="https://www.linkedin.com/in/ricky-chen-2b24b562">
+										<img class="sendToBottom sendToLeftHeadshot headShotPic" src="https://i.imgur.com/dFtxIHG.jpg" />
+									</a>
 								</div>
-								<div  class="piiSizingInfo RokkittFont">
-									BS in Computer Science<br/>
-									San Francisco, California<br/>
-									rickychen10@gmail.com<br/>
-									(415) 608-4948<br/><br/>
+								<div class="rightPii">
+									<div class="sendToBottom piiBackground ml-auto">
+										<div class="mainPiiDiv">
+											<div class="piiSizingName headerFont fadeInEffect">
+												Ricky Chen
+											</div>
+											<div  class="piiSizingInfo RokkittFont">
+												<Span class="piiInfoHeader">Major:<br/></Span>
+												BS in Computer Science<br/>
+												<Span class="piiInfoHeader">City:<br/></Span>
+												San Francisco, California<br/>
+												<Span class="piiInfoHeader">Email:<br/></Span>
+												rickychen10@gmail.com<br/>
+												<Span class="piiInfoHeader">Telephone:<br /></Span>
+												(415) 608-4948<br/><br/>
+											</div>
+										</div>
+									</div>
 								</div>
 							</div>
+						</div>
+						<div class="col-3">
+
 						</div>
 					</div>
 				<!--	<div style="position:absolute;"  class="col col-lg-3 col-sm-12 float-right">
